fix styles: align center for avatar

--- a/src/style/dayBillList.css
+++ b/src/style/dayBillList.css
@@ -8,3 +8,6 @@
     padding: 10px;
 }
 
+.ant-list-item-meta-avatar {
+    align-self: center;
+}
